<resources>
    <string name="app_name" translatable="false">Count Match</string>
    <!--greeting-->
    <string name="greetings">Добро пожаловать!</string>
    <string name="greetings_text">С нашим приложением вы можете ставить таймер с уведомлением на предстоящие события</string>
    <string name="greetings_text_button">Понятно, продолжить</string>
    <!--permission-->
    <string name="permission">Разрешения</string>
    <string name="permission_text">Все события автоматически будут добавлены в виджеты вашего устройства, список разрешений:</string>
    <string name="permission1">"- виджеты рабочего стола "</string>
    <string name="permission2">" - календарь"</string>
    <string name="permission3">- пуш-уведомления</string>
    <string name="permission4">- клавиатура</string>
    <string name="permission_text_button">Подтвердить и продолжить</string>
    <!--main-->
    <string name="ticker_bought">билет куплен</string>
    <string name="event_ended">Событие завершено</string>
    <string name="ticker_not_bought">билет не куплен</string>
    <string name="my_actions">Мои события</string>
    <string name="timer">%1$d дн. %2$d час. %3$d мин. %4$d сек.</string>
    <!--adding-->
    <string name="football_hint">Футбольный матч</string>
    <string name="date_hint">дд-мм-гггг</string>
    <string name="date_time_hint">чч-мм-сс</string>
    <string name="add">Новое событие</string>
    <string name="title_text">Название:</string>
    <string name="date_text">Дата события:</string>
    <string name="date_time_text">Время события:</string>
    <string name="tickets_bought">Билеты уже куплены</string>
    <string name="add_event">Создать событие</string>
    <string name="invalid_date">Неверный формат даты</string>
    <string name="fill_data">заполните поля</string>
    <string name="invalid_date_time">Неверный формат времени</string>
    <string name="date_inPast">Введена дата из прошлого</string>
    <string name="added">Готово</string>
    <string name="added2">Ваше событие создано успешно!</string>
    <string name="add_more">Создать ещё одно событие</string>
    <string name="go_main">Перейти к списку событий</string>
    <!--editing-->
    <string name="event">Событие</string>
    <string name="count_down">Начало через</string>
    <string name="day">Дн.</string>
    <string name="hours">Час.</string>
    <string name="mins">Мин.</string>
    <string name="secs">Сек.</string>
    <string name="alert">Вы уверены что хотите удалить событие?</string>
    <string name="accept">Да, удалить</string>
    <string name="decline">Отменить</string>
    <string name="save_and_back">Вернуться назад</string>
    <string name="no_save_and_back">Вернуться не сохраняя</string>
    <string name="delete_all_events">Удалить все события</string>
    <!--settings-->
    <string name="settings">Настройки</string>
    <string name="language">Язык</string>
    <string name="ru">Русский</string>
    <string name="en">Английский</string>
    <string name="de">Немецкий</string>
    <string name="sounds">Звуки</string>
    <string name="back">Назад</string>
    <string name="delete_all">Удалить все карточки события</string>

</resources>