<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.settings.SettingsActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/Head6TextStyle"
            android:text="@string/settings"
            android:id="@+id/settings"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/TitleTextStyle"
            android:text="@string/language"
            android:id="@+id/languageText"
            android:layout_below="@id/settings"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioGroup
            android:layout_marginStart="35dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/languageText"
            android:id="@+id/radioGroup"
            android:checkedButton="@+id/radio_button_1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/ru"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ru"/>
            <RadioButton
                android:id="@+id/en"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/en"/>
            <RadioButton
                android:id="@+id/de"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/de"/>
        </RadioGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_below="@id/radioGroup"
            android:layout_width="match_parent"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/sound"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="sounds"/>

    </RelativeLayout>

</layout>