<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.splash.GreetingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:id="@+id/clock_background"
            android:src="@drawable/ic_clock_backgroud"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            />
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_below="@+id/clock_background"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <TextView
            style="@style/Head6TextStyle"
            android:id="@+id/greetings"
            android:text="@string/greetings"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_marginTop="10dp"
            style="@style/TitleTextStyle"
            android:text="@string/greetings_text"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:text="@string/greetings_text_button"
            style="@style/ButtonStyle"
            android:id="@+id/next"
            android:layout_marginBottom="40dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="312dp"
            android:layout_height="78dp"/>


    </RelativeLayout>

</layout>