<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.edit.EditActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        style="@style/Head6TextStyle"
        android:text="@string/event"
        android:id="@+id/eventText"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_clock"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/eventText">
            <TextView
                style="@style/TitleBlackTextStyle"
                android:text="@string/event"
                android:id="@+id/title"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_below="@id/title"
                style="@style/BodyBlackTextStyle"
                android:text="@string/count_down"
                android:id="@+id/countdown"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                app:iconTint="@color/colorCancel"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                app:icon="@drawable/ic_delete_icon"
                android:id="@+id/delete"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:text="10"
                android:background="@color/colorGrayInput"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_below="@id/countdown"
                android:id="@+id/day"
                style="@style/TitleBlackTextStyle"
                android:textAlignment="center"
                android:minWidth="40dp"
                android:minHeight="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                style="@style/BodyBlackTextStyle"
                android:text="@string/day"
                android:id="@+id/dayText"
                android:layout_below="@id/countdown"
                android:layout_toEndOf="@id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="10"
                android:background="@color/colorGrayInput"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_below="@id/day"
                android:id="@+id/hours"
                style="@style/TitleBlackTextStyle"
                android:minWidth="40dp"
                android:minHeight="25dp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                style="@style/BodyBlackTextStyle"
                android:text="@string/hours"
                android:id="@+id/hoursText"
                android:layout_below="@id/day"
                android:layout_toEndOf="@id/hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="10"
                android:background="@color/colorGrayInput"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_below="@id/hours"
                android:id="@+id/minutes"
                style="@style/TitleBlackTextStyle"
                android:minWidth="40dp"
                android:minHeight="25dp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                style="@style/BodyBlackTextStyle"
                android:text="@string/mins"
                android:id="@+id/minutesText"
                android:layout_below="@id/hours"
                android:layout_toEndOf="@id/hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="10"
                android:background="@color/colorGrayInput"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_below="@id/minutes"
                android:id="@+id/secs"
                style="@style/TitleBlackTextStyle"
                android:minWidth="40dp"
                android:minHeight="25dp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                style="@style/BodyBlackTextStyle"
                android:text="@string/secs"
                android:id="@+id/secsText"
                android:layout_below="@id/minutes"
                android:layout_toEndOf="@id/minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:text="@string/save_and_back"
            style="@style/ButtonStyle"
            android:id="@+id/save"
            android:layout_marginTop="30dp"
            android:layout_below="@id/container"
            android:layout_centerHorizontal="true"
            android:layout_width="312dp"
            android:layout_height="78dp"/>

    </RelativeLayout>
</layout>